[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/Puzzles/Puzzle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Objects/Circuit/OhmsLaw.png" type="Texture" id=2]
[ext_resource path="res://Resources/Puzzles/Chapter II/OhmsLaw/OhmsLaw.gd" type="Script" id=3]
[ext_resource path="res://Resources/Objects/PuzzleGraphics/HubUi.png" type="Texture" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="OhmsLaw" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Background" parent="." index="0"]
color = Color( 0.564706, 0.564706, 0.564706, 1 )

[node name="Sprite2" type="Sprite" parent="." index="2"]
position = Vector2( 159.866, 89.086 )
scale = Vector2( 0.469, 0.469 )
texture = ExtResource( 4 )

[node name="InstructionLabel" type="Label" parent="." index="3"]
margin_left = 62.9513
margin_top = 26.5797
margin_right = 186.952
margin_bottom = 40.5797
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="." index="4"]
margin_left = 234.919
margin_top = 111.919
margin_right = 285.919
margin_bottom = 125.919
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="." index="5"]
position = Vector2( 118.361, 115.215 )
scale = Vector2( 0.524519, 0.524519 )
texture = ExtResource( 2 )
hframes = 2

[node name="VoltageA" type="LineEdit" parent="." index="6"]
margin_left = 227.806
margin_top = 77.6724
margin_right = 285.807
margin_bottom = 101.672
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="VoltageA" to="." method="_on_VoltageA_text_entered"]
